// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prepare-task prepares a digest of a file in tasks 1`] = `
Object {
  "args": Object {
    "a": 1,
  },
  "digest": 1,
  "files": Object {
    "test": Object {
      "digest": "6b8c327f0fc6f470c030a5b6c71154c5",
      "originPath": "<PROJECT_ROOT>/packages/dagsby/src/__tests__/mocks/hello.txt",
    },
  },
  "func": [Function],
}
`;

exports[`prepare-task prepares a digest of multiple file in tasks 1`] = `
Object {
  "args": Object {
    "a": 1,
  },
  "digest": 2,
  "files": Object {
    "test": Object {
      "digest": "6b8c327f0fc6f470c030a5b6c71154c5",
      "originPath": "<PROJECT_ROOT>/packages/dagsby/src/__tests__/mocks/hello.txt",
    },
    "test2": Object {
      "digest": "fa88464ad571637e672fb5bb6d8188e9",
      "originPath": "<PROJECT_ROOT>/packages/dagsby/src/__tests__/mocks/hello2.txt",
    },
  },
  "func": [Function],
}
`;
